fix(Selectcity): add z-index

--- a/src/components/selectcity/selectcity.scss
+++ b/src/components/selectcity/selectcity.scss
@@ -84,6 +84,7 @@
     margin-top: 12px;
     outline: none;
     position: absolute;
+    z-index: 1;
 
     &:focus {
       border: 2px solid $secondary;
